package ar.edu.cuvl.utn.progra3.Ejercicio_emp_logistica.Clases.Objeto;

public interface Electrico {
    public Integer getVoltaje();
}
